--- a/dockerfile/rocm-tvm:2.5
+++ b/dockerfile/rocm-tvm:2.5
@@ -12,7 +12,7 @@ RUN cd /src/llvm-project && mkdir build
 RUN cd /src/llvm-project/build && cmake -G "Unix Makefiles" -DLLVM_ENABLE_PROJECTS="lld;compiler-rt;clang" -DLLVM_TARGETS_TO_BUILD="X86;AMDGPU" -DCMAKE_INSTALL_PREFIX=/usr/local/llvm ../llvm
 RUN cd /src/llvm-project/build && make 2>&1 | tee make.log && make install
 RUN cd /src && git clone --recursive https://github.com/dmlc/tvm
-RUN cd /src/tvm/codegen/llvm && sed -e 's/DetectROCMComputeVersion(target)/DetectROCMComputeVersion(target) << " -mattr=-code-object-v3 "/g' codegen_amdgpu.cc > codegen_amdgpu.cc.new && mv codegen_amdgpu.cc codegen_amdgpu.cc.old && mv codegen_amdgpu.cc.new codegen_amdgpu.cc
+RUN cd /src/tvm/src/codegen/llvm && sed -e 's/DetectROCMComputeVersion(target)/DetectROCMComputeVersion(target) << " -mattr=-code-object-v3 "/g' codegen_amdgpu.cc > codegen_amdgpu.cc.new && mv codegen_amdgpu.cc codegen_amdgpu.cc.old && mv codegen_amdgpu.cc.new codegen_amdgpu.cc
 RUN mkdir /src/tvm/build
 RUN cd /src/tvm/build && sed -e 's/USE_ROCM OFF/USE_ROCM ON/g' -e 's?USE_LLVM OFF?USE_LLVM /usr/local/llvm/bin/llvm-config?g' -e 's/USE_MIOPEN OFF/USE_MIOPEN ON/g' -e 's/USE_ROCBLAS OFF/USE_ROCBLAS ON/g' ../cmake/config.cmake > config.cmake
 RUN cd /src/tvm/build && cmake .. && make
