--- a/dockerfile/rocm-tvm:2.3
+++ b/dockerfile/rocm-tvm:2.3
@@ -19,3 +19,4 @@ RUN cd /src/tvm/build && cmake .. && make
 RUN cd /src/tvm/python && python3 setup.py install
 RUN cd /src/tvm/topi/python && python3 setup.py install
 RUN cd /src/tvm/nnvm/python && python3 setup.py install
+RUN pip3 install scipy psutil xgboost tornado
