--- a/dockerfile/rocm-tvm:2.3
+++ b/dockerfile/rocm-tvm:2.3
@@ -7,10 +7,7 @@ RUN apt update && apt install -y git cmake libz3-dev libxml2-dev
 RUN apt update && apt install -y rocm-libs miopen-hip
 RUN apt update && apt install -y python python-dev python-setuptools gcc libtinfo-dev zlib1g-dev build-essential python3 python3-pip
 RUN mkdir /src
-RUN cd /src && git clone https://github.com/llvm/llvm-project.git
-RUN cd /src/llvm-project && mkdir build
-RUN cd /src/llvm-project/build && cmake -G "Unix Makefiles" -DLLVM_ENABLE_PROJECTS="lld;compiler-rt;clang" -DLLVM_TARGETS_TO_BUILD="X86;AMDGPU" -DCMAKE_INSTALL_PREFIX=/usr/local/llvm ../llvm
-RUN cd /src/llvm-project/build && make 2>&1 | tee make.log && make install
+COPY llvmbuild/install/* /usr/local/llvm/
 RUN cd /src && git clone --recursive https://github.com/dmlc/tvm
 RUN cd /src/tvm/src/codegen/llvm && sed -e 's/DetectROCMComputeVersion(target)/DetectROCMComputeVersion(target) << " -mattr=-code-object-v3 "/g' codegen_amdgpu.cc > codegen_amdgpu.cc.new && mv codegen_amdgpu.cc codegen_amdgpu.cc.old && mv codegen_amdgpu.cc.new codegen_amdgpu.cc
 RUN mkdir /src/tvm/build
