--- a/dockerfile/rocm-tvm:2.9
+++ b/dockerfile/rocm-tvm:2.9
@@ -8,7 +8,7 @@ RUN apt update && apt install -y rocm-libs miopen-hip
 RUN apt update && apt install -y python python-dev python-setuptools gcc libtinfo-dev zlib1g-dev build-essential python3 python3-pip
 RUN mkdir /src
 COPY llvmbuild/install/ /usr/local/llvm/
-RUN cd /src && git clone --recursive https://github.com/dmlc/tvm
+RUN cd /src && git clone --recursive https://github.com/dmlc/tvm && cd tvm && git checkout v0.6
 RUN mkdir /src/tvm/build
 RUN cd /src/tvm/build && sed -e 's/USE_ROCM OFF/USE_ROCM ON/g' -e 's?USE_LLVM OFF?USE_LLVM /usr/local/llvm/bin/llvm-config?g' -e 's/USE_MIOPEN OFF/USE_MIOPEN ON/g' -e 's/USE_ROCBLAS OFF/USE_ROCBLAS ON/g' ../cmake/config.cmake > config.cmake
 RUN cd /src/tvm/build && cmake .. && make
