--- a/dockerfile/rocm-tvm:3.1
+++ b/dockerfile/rocm-tvm:3.1
@@ -10,7 +10,7 @@ RUN mkdir /src
 COPY llvmbuild/install/ /usr/local/llvm/
 RUN cd /src && git clone --recursive https://github.com/dmlc/tvm
 # work around recent TVM regression
-RUN cd /src/tvm && git checkout c4c61cb76
+# RUN cd /src/tvm && git checkout c4c61cb76
 RUN mkdir /src/tvm/build
 RUN cd /src/tvm/build && sed -e 's/USE_ROCM OFF/USE_ROCM ON/g' -e 's?USE_LLVM OFF?USE_LLVM /usr/local/llvm/bin/llvm-config?g' -e 's/USE_MIOPEN OFF/USE_MIOPEN ON/g' -e 's/USE_ROCBLAS OFF/USE_ROCBLAS ON/g' ../cmake/config.cmake > config.cmake
 RUN cd /src/tvm/build && cmake .. && make
