--- a/dockerfile/rocm-tvm:3.7
+++ b/dockerfile/rocm-tvm:3.7
@@ -10,6 +10,7 @@ RUN apt update && apt install -y python python-dev python-setuptools gcc libtinf
 COPY llvmbuild9/install/ /usr/local/llvm/
 RUN cd /src && git clone --recursive https://github.com/dmlc/tvm
 RUN sed -i 's/-mattr=-code-object-v3//g' /src/tvm/src/target/llvm/codegen_amdgpu.cc
+RUN sed -i 's/hip_hcc/amdhip64/g' /src/tvm/cmake/util/FindROCM.cmake
 RUN mkdir /src/tvm/build
 RUN cd /src/tvm/build && sed -e 's/USE_ROCM OFF/USE_ROCM ON/g' -e 's?USE_LLVM OFF?USE_LLVM /usr/local/llvm/bin/llvm-config?g' -e 's/USE_MIOPEN OFF/USE_MIOPEN ON/g' -e 's/USE_ROCBLAS OFF/USE_ROCBLAS ON/g' ../cmake/config.cmake > config.cmake
 RUN cd /src/tvm/build && cmake .. && make
