Update to remove pip install of pciutils.

--- a/dockerfile/rocm-tvm:3.7
+++ b/dockerfile/rocm-tvm:3.7
@@ -18,4 +18,4 @@ RUN cd /src/tvm/python && python3 setup.py install
 RUN cd /src && git clone https://github.com/mvermeulen/rocm-tvm
 RUN pip3 install scipy psutil xgboost tornado
 RUN apt update && apt install -y libomp-dev graphviz rccl libopenblas-dev pciutils
-RUN pip3 install jupyter transformers antlr4-python3-runtime graphviz pciutils
+RUN pip3 install jupyter transformers antlr4-python3-runtime graphviz
