--- a/dockerfile/rocm-tvm:3.8
+++ b/dockerfile/rocm-tvm:3.8
@@ -9,13 +9,11 @@ RUN apt update && apt install -y rocm-libs miopen-hip
 RUN apt update && apt install -y python python-dev python-setuptools gcc libtinfo-dev zlib1g-dev build-essential python3 python3-pip
 COPY llvmbuild9/install/ /usr/local/llvm/
 RUN cd /src && git clone --recursive https://github.com/dmlc/tvm
-#RUN sed -i 's/-mattr=-code-object-v3//g' /src/tvm/src/target/llvm/codegen_amdgpu.cc
-#RUN sed -i 's/hip_hcc/amdhip64/g' /src/tvm/cmake/util/FindROCM.cmake
 RUN mkdir /src/tvm/build
 RUN cd /src/tvm/build && sed -e 's/USE_ROCM OFF/USE_ROCM ON/g' -e 's?USE_LLVM OFF?USE_LLVM /usr/local/llvm/bin/llvm-config?g' -e 's/USE_MIOPEN OFF/USE_MIOPEN ON/g' -e 's/USE_ROCBLAS OFF/USE_ROCBLAS ON/g' ../cmake/config.cmake > config.cmake
 RUN cd /src/tvm/build && cmake .. && make
 RUN cd /src/tvm/python && python3 setup.py install
 RUN cd /src && git clone https://github.com/mvermeulen/rocm-tvm
-RUN pip3 install scipy psutil xgboost tornado
+RUN pip3 install scipy psutil xgboost tornado pytest
 RUN apt update && apt install -y libomp-dev graphviz rccl libopenblas-dev pciutils
 RUN pip3 install jupyter transformers antlr4-python3-runtime graphviz
