--- a/dockerfile/rocm-tvm:4.2
+++ b/dockerfile/rocm-tvm:4.2
@@ -1,9 +1,15 @@
 FROM rocm/dev-ubuntu-18.04:4.2
-RUN sed -e 's/debian/4.2/g' /etc/apt/sources.list.d/rocm.list > /etc/apt/sources.list.d/rocm4.2.list
-RUN rm /etc/apt/sources.list.d/rocm.list
-ENV PATH=/usr/local/llvm/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+
 ENV DEBIAN_FRONTEND=noninteractive
+ENV PATH=/usr/local/llvm/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+
+# Dance since GPG key has expired so need to remove references before calling apt update
+RUN rm /etc/apt/sources.list.d/rocm.list
+#RUN sed -e 's/debian/4.2/g' /etc/apt/sources.list.d/rocm.list > /etc/apt/sources.list.d/rocm4.2.list
 RUN apt update && apt install -y git wget libz3-dev libxml2-dev openssl libssl-dev libtinfo-dev
+RUN wget -q -O - https://repo.radeon.com/rocm/rocm.gpg.key | apt-key add -
+RUN echo 'deb [arch=amd64] https://repo.radeon.com/rocm/apt/4.2/ ubuntu main' | tee /etc/apt/sources.list.d/rocm4.2.list
+
 RUN apt install -y python3.8 python3.8-dev && update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.8 1
 RUN mkdir /src && cd /src && wget https://github.com/Kitware/CMake/releases/download/v3.17.3/cmake-3.17.3.tar.gz && tar xf cmake-3.17.3.tar.gz && cd cmake-3.17.3 && ./configure && make && make install
 RUN apt update && apt install -y rocm-libs miopen-hip
