--- a/dockerfile/rocm-tvm:4.3
+++ b/dockerfile/rocm-tvm:4.3
@@ -3,7 +3,7 @@ RUN sed -e 's/debian/4.3/g' /etc/apt/sources.list.d/rocm.list > /etc/apt/sources
 RUN rm /etc/apt/sources.list.d/rocm.list
 ENV PATH=/opt/rocm/llvm/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 ENV DEBIAN_FRONTEND=noninteractive
-RUN apt update && apt install -y git wget libz3-dev libxml2-dev openssl libssl-dev libtinfo-dev
+RUN apt update && apt install -y git wget libz3-dev libxml2-dev openssl libssl-dev libtinfo-dev libprotobuf-dev protobuf-compiler
 RUN apt install -y python3.8 python3.8-dev && update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.8 1
 RUN mkdir /src && cd /src && wget https://github.com/Kitware/CMake/releases/download/v3.17.3/cmake-3.17.3.tar.gz && tar xf cmake-3.17.3.tar.gz && cd cmake-3.17.3 && ./configure && make && make install
 RUN apt update && apt install -y rocm-libs miopen-hip
@@ -16,4 +16,5 @@ RUN cd /src/tvm/python && python3 setup.py install
 RUN cd /src && git clone https://github.com/mvermeulen/rocm-tvm
 RUN pip3 install scipy psutil xgboost tornado pytest
 RUN apt update && apt install -y libomp-dev graphviz rccl libopenblas-dev pciutils
-RUN pip3 install jupyter transformers antlr4-python3-runtime graphviz
+RUN export CMAKE_ARGS=-DONNX_USE_PROTOBUF_SHARED_LIBS=ON
+RUN pip3 install jupyter transformers antlr4-python3-runtime graphviz onnx pillow
