--- a/dockerfile/rocm-tvm:4.5
+++ b/dockerfile/rocm-tvm:4.5
@@ -7,7 +7,7 @@ RUN apt update && apt install -y git wget libz3-dev libxml2-dev openssl libssl-d
 RUN apt install -y python3.8 python3.8-dev && update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.8 1
 RUN mkdir /src && cd /src && wget https://github.com/Kitware/CMake/releases/download/v3.17.3/cmake-3.17.3.tar.gz && tar xf cmake-3.17.3.tar.gz && cd cmake-3.17.3 && ./configure && make && make install
 RUN apt update && apt install -y rocm-libs miopen-hip
-RUN apt update && apt install -y python python-dev python-setuptools gcc libtinfo-dev zlib1g-dev build-essential python3 python3-pip
+RUN apt update && apt install -y python python-dev python-pip python-setuptools gcc libtinfo-dev zlib1g-dev build-essential python3 python3-pip
 RUN cd /src && git clone --recursive https://github.com/mvermeulen/tvm && cd tvm && git checkout rocm-4.5-test
 RUN mkdir /src/tvm/build
 RUN cd /src/tvm/build && sed -e 's/USE_ROCM OFF/USE_ROCM ON/g' -e 's?USE_LLVM OFF?USE_LLVM /opt/rocm/llvm/bin/llvm-config?g' -e 's/USE_MIOPEN OFF/USE_MIOPEN ON/g' -e 's/USE_ROCBLAS OFF/USE_ROCBLAS ON/g' ../cmake/config.cmake > config.cmake
