--- a/dockerfile/rocm-tvm:5.7
+++ b/dockerfile/rocm-tvm:5.7
@@ -7,8 +7,7 @@ RUN apt update && apt install -y git wget libz3-dev libxml2-dev openssl libssl-d
 RUN apt update && apt install -y rocm-libs miopen-hip
 RUN apt update && apt install -y python3-dev python-setuptools gcc libtinfo-dev zlib1g-dev build-essential python3 python3-pip python3-setuptools python3-numpy cmake
 
-# PR #14901 seems to have introduced problem with ROCm codegen, use #53cee4 temporarily to work around this...
-RUN mkdir /src && cd /src && git clone --recursive https://github.com/mvermeulen/tvm && cd tvm && git checkout 53cee4
+RUN mkdir /src && cd /src && git clone --recursive https://github.com/mvermeulen/tvm
 
 RUN mkdir /src/tvm/build
 RUN cd /src/tvm/build && sed -e 's/USE_RELAY_DEBUG OFF/USE_RELAY_DEBUG ON/g' -e 's/USE_ROCM OFF/USE_ROCM ON/g' -e 's?USE_LLVM OFF?USE_LLVM /opt/rocm/llvm/bin/llvm-config?g' -e 's/USE_MIOPEN OFF/USE_MIOPEN ON/g' -e 's/USE_ROCBLAS OFF/USE_ROCBLAS ON/g' ../cmake/config.cmake > config.cmake
@@ -16,7 +15,6 @@ RUN cd /src/tvm/build && sed -e 's/USE_RELAY_DEBUG OFF/USE_RELAY_DEBUG ON/g' -e 
 RUN cd /src/tvm/build && cmake .. && make
 #RUN pip3 install os-sys
 RUN pip3 install -U numpy
-RUN pip3 list | grep numpy
 # temporary hack to fix numpy build issue (this was fixed in v0.14, likely #b4b27f
 RUN sed -i -e 's/"<=1.23"/None/g' /src/tvm/python/gen_requirements.py
 #
