--- a/dockerfile/rocm-tvm:5.7
+++ b/dockerfile/rocm-tvm:5.7
@@ -1,4 +1,5 @@
 FROM rocm/dev-ubuntu-22.04:5.7
+ARG parallel=1
 RUN sed -e 's/debian/5.7/g' /etc/apt/sources.list.d/rocm.list > /etc/apt/sources.list.d/rocm5.7.list
 RUN rm /etc/apt/sources.list.d/rocm.list
 ENV PATH=/opt/rocm/llvm/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
@@ -7,17 +8,14 @@ RUN apt update && apt install -y git wget libz3-dev libxml2-dev openssl libssl-d
 RUN apt update && apt install -y rocm-libs miopen-hip
 RUN apt update && apt install -y python3-dev python-setuptools gcc libtinfo-dev zlib1g-dev build-essential python3 python3-pip python3-setuptools python3-numpy cmake
 
-RUN mkdir /src && cd /src && git clone --recursive https://github.com/mvermeulen/tvm
+RUN mkdir /src && cd /src && git clone --recursive https://github.com/mvermeulen/tvm && cd tvm && git checkout rocm5.7-test
 
 RUN mkdir /src/tvm/build
 RUN cd /src/tvm/build && sed -e 's/USE_RELAY_DEBUG OFF/USE_RELAY_DEBUG ON/g' -e 's/USE_ROCM OFF/USE_ROCM ON/g' -e 's?USE_LLVM OFF?USE_LLVM /opt/rocm/llvm/bin/llvm-config?g' -e 's/USE_MIOPEN OFF/USE_MIOPEN ON/g' -e 's/USE_ROCBLAS OFF/USE_ROCBLAS ON/g' ../cmake/config.cmake > config.cmake
 #RUN cd /src/tvm/build && cmake -DCMAKE_CXX_FLAGS="-Wno-deprecated-declarations" .. && make
-RUN cd /src/tvm/build && cmake .. && make
+RUN cd /src/tvm/build && cmake .. && make -j ${parallel}
 #RUN pip3 install os-sys
 RUN pip3 install -U numpy
-# temporary hack to fix numpy build issue (this was fixed in v0.14, likely #b4b27f
-RUN sed -i -e 's/"<=1.23"/None/g' /src/tvm/python/gen_requirements.py
-#
 RUN cd /src/tvm/python && python3 setup.py install
 RUN cd /src && git clone https://github.com/mvermeulen/rocm-tvm
 RUN pip3 install scipy psutil xgboost tornado pytest
