--- a/dockerfile/vulkan-tvm:5.7
+++ b/dockerfile/vulkan-tvm:5.7
@@ -3,6 +3,7 @@
 FROM ubuntu:22.04
 ARG install_script="https://repo.radeon.com/amdgpu-install/5.7.1/ubuntu/jammy/amdgpu-install_5.7.50701-1_all.deb"
 ARG parallel=1
+ENV PATH=/opt/rocm/llvm/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 ENV DEBIAN_FRONTEND=noninteractive
 WORKDIR /workdir
 RUN echo "APT::Get::Assume-Yes \"true\";\n" >> /etc/apt/apt.conf.d/answer-yes
